<resources>
    <string name="app_name">Simple Eat</string>
    <string name="action_settings">Settings</string>
    <string-array name="views_array">
        <item>Меню</item>
        <item>Кухня</item>
        <item>Корзина</item>
        <item>О приложении</item>
    </string-array>
    <string name="menu">Меню</string>
    <string name="first_screen">Меню</string>
    <string name="kitchen_title">Кухня</string>
    <string name="open_menu">Открыть</string>
    <string name="close_menu">Закрыть</string>
    <string name="empty_list">Нет рецептов</string>
    <string name="new_recipe">Новый рецепт</string>
    <string name="new_recipe_title_title">Название рецепта</string>
    <string name="new_recipe_title_edit_text_hint">Введите название рецепта</string>
    <string name="new_recipe_type">Выберите тип</string>
    <string name="new_recipe_element_title">Выберите ингридиенты</string>
    <string name="new_recipe_step_title">Добавьте шаги</string>
    <string name="recipe_steps_separator">Шаги приготовления</string>
    <string name="step_number">Шаг №%d</string>
    <string name="step_hint">Описание шага</string>
    <string name="kitchen_add_recipe_button_title">Добавить рецепт</string>
    <string name="is_favorite">Избранное!</string>
    <string name="delete_button">Удалить</string>
    <string name="recipe_type_title">Тип</string>
    <string name="elements">Ингридиенты</string>
    <string name="new_recipe_title_photo">Фотография рецепта</string>
    <string-array name="photo_answer">
        <item>Сделать фото</item>
        <item>Выбрать из галереи</item>
        <item>Отмена</item>
    </string-array>

    <string name="information_title">Simple Eat v0.6</string>
    <string name="information_title_app">Данное приложение позволяет создавать свои рецепты для их использования в будущем
        сортировать их по спискам, удобным для отображения.</string>
    <string name="information_title_features">Реализованные фичи:\n1. Создание и просмотр рецепта с
        шагами, ингридиентами\n2. Сортировка по типам\n3. Фотографии рецептов\n4. Корзина\n5. Интро)</string>
    <string name="information_title_features_new">В ближайшем будущем будет реализовано:\n1. Таймер для шагов\n2. Редизайн =)</string>

    <!--sync with enum-->
    <string-array name="recipe_type_array">
        <item>Супы</item>
        <item>Второе</item>
        <item>Простой рецепт</item>
        <item>Напитки</item>
        <item>Салат</item>
    </string-array>

    <string name="send_subject">Отзыв о приложении Simple Eat</string>
    <string name="send_chooser_title">Отправить с помощью...</string>
    <string name="send_my_email">ng@redmadrobot.com</string>
    <string name="send_device_info">\n\nВерсия приложения: %1$s\nУстройство: %2$s\nВерсия ОС: Android %3$s</string>
    <string name="send_my_vk">http://vk.com/abbath</string>
    <string name="empty_basket">У вас нет отмеченных ингридиентов</string>
    <string name="recipe_photo_title">Фотография</string>
    <string name="new_recipe_portion_count_title">Выберите количество порций</string>
    <string name="new_recipe_portion_time_title">Задайте время приготовления</string>
    <string name="time_picker_hours">Часов</string>
    <string name="time_picker_minuts">Минут</string>

</resources>
