<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_title_title"/>

    <EditText
        android:id="@+id/new_recipe_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_recipe_title_edit_text_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_type"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>