<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_title_title"/>

    <EditText
        android:id="@+id/new_recipe_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/new_recipe_title_edit_text_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_type"/>

    <Spinner
        android:id="@+id/new_resipe_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/recipe_type_array"/>

    <LinearLayout
        android:id="@+id/list_view_element_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/kitchen_button_add_element"
                android:src="@drawable/ic_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <ImageButton
                android:id="@+id/kitchen_button_remove_element"
                android:src="@drawable/ic_delete_recipe_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/kitchen_add_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kitchen_add_recipe_button_title"
        />


</LinearLayout>